# ptg-cal

./: .gitignore  requirements.txt  setup.cfg  setup.py
ptg_cal/: main.py
work_dir/: data.csv
